@@ -1,3 +1,5 @@
+* Add a button to manually reapply rule engine
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Use move line date by default when created by rule engine
